# setup_linux

./: LICENSE  hosts.yaml  playbook.yaml  pyproject.toml
roles/debian_python_env/tasks/: install_poetry.yaml  main.yaml
roles/maru_camera/files/: push_image.service  push_image.timer  take_photo.service  take_photo.sh  take_photo.timer
roles/maru_camera/tasks/: install_ufw.yaml  main.yaml
roles/maru_web/files/: gunicorn.service  maru_web.conf
roles/maru_web/tasks/: main.yaml
roles/merge_movie/tasks/: install_poetry.yaml  install_pyenv.yaml  main.yaml
roles/raspi_default/files/: gistfile1.txt
roles/raspi_default/tasks/: install_pyenv.yaml  install_ufw.yaml  main.yaml
