[tool.poetry]
name = "setup-linux"
version = "0.1.0"
description = ""
authors = ["TaikiIwahori <hmyrwjj@yahoo.co.jp>"]
readme = "README.md"
packages = [{include = "setup_linux"}]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.1.0"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
